--- a/wp-content/themes/itify/style.css
+++ b/wp-content/themes/itify/style.css
@@ -1,6 +1,6 @@
 /*!
 Theme Name: Itify
-Theme URI: https://softivuslab.com/wp/itify
+Theme URI: https://pixelaxis.net/itify
 Author: Pixelaxis
 Author URI: https://themeforest.net/user/pixelaxis/portfolio
 Description: Itify is a clean, minimalist WordPress Theme for digital agency, software agency, business, agency, technology service, it services, modern it solutions, software, software company, startup, startups, consulting, technology IT Solutions and Services Template or multipurpose use etc.
